--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -20,12 +20,6 @@ jobs:
         with:
           path: bin/linux/java
           key: ${{ runner.os }}-${{ hashFiles('versions.properties') }}-java
-      - name: Cache Z3
-        id: cache-z3
-        uses: actions/cache@v2
-        with:
-          path: bin/linux/z3
-          key: ${{ runner.os }}-${{ hashFiles('versions.properties') }}-z3
       - name: Cache Scala
         id: cache-scala
         uses: actions/cache@v2
@@ -38,6 +32,15 @@ jobs:
         with:
           path: cache/coursier
           key: ${{ runner.os }}-${{ hashFiles('versions.properties') }}-coursier
+      - name: Cache SMT2 solvers
+        id: cache-smt2
+        uses: actions/cache@v2
+        with:
+          path: |
+            bin/linux/cvc4
+            bin/linux/.cvc4.ver
+            bin/linux/z3
+          key: ${{ runner.os }}-${{ hashFiles('versions.properties') }}-smt2
       - name: Test
         run: |
           export COURSIER_CACHE=$GITHUB_WORKSPACE/cache/coursier
@@ -60,12 +63,6 @@ jobs:
         with:
           path: bin/mac/java
           key: ${{ runner.os }}-${{ hashFiles('versions.properties') }}-java
-      - name: Cache Z3
-        id: cache-z3
-        uses: actions/cache@v2
-        with:
-          path: bin/mac/z3
-          key: ${{ runner.os }}-${{ hashFiles('versions.properties') }}-z3
       - name: Cache Scala
         id: cache-scala
         uses: actions/cache@v2
@@ -78,6 +75,15 @@ jobs:
         with:
           path: cache/coursier
           key: ${{ runner.os }}-${{ hashFiles('versions.properties') }}-coursier
+      - name: Cache SMT2 solvers
+        id: cache-smt2
+        uses: actions/cache@v2
+        with:
+          path: |
+            bin/mac/cvc4
+            bin/mac/.cvc4.ver
+            bin/mac/z3
+          key: ${{ runner.os }}-${{ hashFiles('versions.properties') }}-smt2
       - name: Test
         run: |
           export COURSIER_CACHE=$GITHUB_WORKSPACE/cache/coursier
@@ -100,12 +106,6 @@ jobs:
         with:
           path: bin\win\java
           key: ${{ runner.os }}-${{ hashFiles('versions.properties') }}-java
-      - name: Cache Z3
-        id: cache-z3
-        uses: actions/cache@v2
-        with:
-          path: bin\win\z3
-          key: ${{ runner.os }}-${{ hashFiles('versions.properties') }}-z3
       - name: Cache Scala
         id: cache-scala
         uses: actions/cache@v2
@@ -118,6 +118,15 @@ jobs:
         with:
           path: cache\coursier
           key: ${{ runner.os }}-${{ hashFiles('versions.properties') }}-coursier
+      - name: Cache SMT2 solvers
+        id: cache-smt2
+        uses: actions/cache@v2
+        with:
+          path: |
+            bin\win\cvc4
+            bin\win\.cvc4.ver
+            bin\win\z3
+          key: ${{ runner.os }}-${{ hashFiles('versions.properties') }}-smt2
       - name: Test
         shell: cmd
         run: |
