--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -118,6 +118,15 @@ jobs:
         with:
           path: cache\coursier
           key: ${{ runner.os }}-${{ hashFiles('versions.properties') }}-coursier
+      - name: Cache SMT2 solvers
+        id: cache-smt2
+        uses: actions/cache@v2
+        with:
+          path: |
+            bin\win\cvc4.exe
+            bin\win\.cvc4.ver
+            bin\win\z3
+          key: ${{ runner.os }}-${{ hashFiles('versions.properties') }}-smt2
       - name: Test
         shell: cmd
         run: |
