--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -37,8 +37,8 @@ jobs:
         uses: actions/cache@v2
         with:
           path: |
-            bin/linux/cvc4
-            bin/linux/.cvc4.ver
+            bin/linux/cvc
+            bin/linux/.cvc.ver
             bin/linux/z3
           key: ${{ runner.os }}-${{ hashFiles('versions.properties') }}-smt2
       - name: Test
@@ -80,8 +80,8 @@ jobs:
         uses: actions/cache@v2
         with:
           path: |
-            bin/mac/cvc4
-            bin/mac/.cvc4.ver
+            bin/mac/cvc
+            bin/mac/.cvc.ver
             bin/mac/z3
           key: ${{ runner.os }}-${{ hashFiles('versions.properties') }}-smt2
       - name: Test
@@ -123,8 +123,8 @@ jobs:
         uses: actions/cache@v2
         with:
           path: |
-            bin\win\cvc4.exe
-            bin\win\.cvc4.ver
+            bin\win\cvc.exe
+            bin\win\.cvc.ver
             bin\win\z3
           key: ${{ runner.os }}-${{ hashFiles('versions.properties') }}-smt2
       - name: Test
