--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -37,6 +37,8 @@ jobs:
         uses: actions/cache@v2
         with:
           path: |
+            bin/linux/alt-ergo-open
+            bin/linux/.alt-ergo-open.ver
             bin/linux/cvc
             bin/linux/.cvc.ver
             bin/linux/z3
@@ -80,6 +82,8 @@ jobs:
         uses: actions/cache@v2
         with:
           path: |
+            bin/mac/alt-ergo-open
+            bin/mac/.alt-ergo-open.ver
             bin/mac/cvc
             bin/mac/.cvc.ver
             bin/mac/z3
